<resources>
    <string name="app_name">Mobile-Front-MA</string>
    <string name="hor_driver_button_text">History of Rides</string>
    <string name="ride_tracking_button">Ride Tracking</string>
    <string name="hor_driver_back_button_text">Home</string>
    <string name="app_name_toolbar">DriveBy</string>
    <string name="hor_title_text">History of Rides</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="login_subtitle">Sign in to continue</string>
    <string name="action_sign_in">Sign in</string>
    <string name="no_account_prompt">Don\'t have an account?</string>
    <string name="action_register">Register</string>
    <string name="action_forgot_password">Forgot password?</string>
    <string name="action_have_code">Have an activation code?</string>
    <string name="forgot_title">Reset password</string>
    <string name="forgot_subtitle">Enter your email and we\'ll send you a code</string>
    <string name="prompt_code">Code from email</string>
    <string name="prompt_new_password">New password</string>
    <string name="action_send_code">Send code</string>
    <string name="action_reset_password">Reset password</string>
    <string name="action_back_to_login">Back to sign in</string>
    <string name="forgot_code_sent">If an account exists, a reset code has been sent to your email.</string>
    <string name="reset_success">Password changed. You can now sign in.</string>
    <string name="confirm_title">Activate account</string>
    <string name="confirm_subtitle">Enter the code we emailed you to activate your account</string>
    <string name="action_activate">Activate</string>
    <string name="confirm_success">Account activated! You can now sign in.</string>
    <string name="register_title">Create account</string>
    <string name="prompt_first_name">First name</string>
    <string name="prompt_last_name">Last name</string>
    <string name="prompt_address">Address</string>
    <string name="prompt_phone">Phone number</string>
    <string name="prompt_confirm_password">Confirm password</string>
    <string name="action_add_photo">Add profile photo (optional)</string>
    <string name="action_create_account">Create account</string>
    <string name="have_account_prompt">Already have an account?</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="register_success">Account created! Enter the code we emailed you to activate your account.</string>
    <string name="action_log_out">Log out</string>
    <string name="logout_success">You have been logged out.</string>
    <string name="driver_status_active">Active</string>
    <string name="driver_status_inactive">Inactive</string>
    <string name="driver_go_active">Go active</string>
    <string name="driver_go_inactive">Go inactive</string>
    <string name="driver_status_changed_active">You are now active.</string>
    <string name="driver_status_changed_inactive">You are now inactive.</string>
    <string name="driver_stop_ride">Stop Ride</string>
    <string name="driver_ride_stopped">Ride stopped. New price: %1$s</string>
    <string name="estimate_fab">Estimate ride</string>
    <string name="estimate_title">Ride estimate</string>
    <string name="estimate_subtitle">Pick where you start and where you\'re going in Novi Sad.</string>
    <string name="prompt_start">Start</string>
    <string name="prompt_destination">Destination</string>
    <string name="action_show_route">Show route</string>
    <string name="estimate_route_title">Your route</string>
    <string name="estimate_label_time">Est. time</string>
    <string name="estimate_label_distance">Distance</string>
    <string name="estimate_label_price">Approx. price</string>
    <string name="estimate_error_pick">Pick a start and destination from the suggestions.</string>
    <string name="estimate_clear">Clear route</string>
    <string name="estimate_route_arrow">→</string>
    <string name="hor_user_title">My ride history</string>
    <string name="hor_admin_title">Ride history</string>
    <string name="hor_admin_title_for">History · %1$s</string>
    <string name="hor_created_prefix">Created: %1$s</string>
    <string name="hor_panic_flag">PANIC</string>
    <string name="hor_sort_label">Sort by</string>
    <string name="hor_sort_dir_asc">Ascending</string>
    <string name="hor_sort_dir_desc">Descending</string>
    <string name="hor_filter_from">From date</string>
    <string name="hor_filter_to">To date</string>
    <string name="hor_filter_apply">Apply</string>
    <string name="hor_filter_clear">Clear</string>
    <string name="hor_empty">No rides to show.</string>
    <string name="hor_shake_hint">Shake the device to flip the date order.</string>
    <string name="hor_sort_creation">Creation date</string>
    <string name="hor_sort_start_time">Start time</string>
    <string name="hor_sort_end_time">End time</string>
    <string name="hor_sort_start_loc">Start location</string>
    <string name="hor_sort_end_loc">End location</string>
    <string name="hor_sort_price">Price</string>
    <string name="hor_sort_status">Status</string>
    <string name="hor_admin_entry_title">Whose history?</string>
    <string name="hor_admin_search_hint">Search by name or email</string>
    <string name="hor_admin_search_action">Search</string>
    <string name="hor_admin_empty">No accounts found. Type a name or email and search.</string>
    <string name="hor_detail_title">Ride details</string>
    <string name="hor_detail_driver">Driver</string>
    <string name="hor_detail_passengers">Passengers</string>
    <string name="hor_detail_reports">Inconsistency reports</string>
    <string name="hor_detail_ratings">Ratings</string>
    <string name="hor_detail_no_driver">No driver recorded.</string>
    <string name="hor_detail_no_passengers">No passengers recorded.</string>
    <string name="hor_detail_no_reports">No reports for this ride.</string>
    <string name="hor_detail_no_ratings">No ratings for this ride.</string>
    <string name="hor_detail_rating_line">Driver %1$d/5 · Vehicle %2$d/5</string>
    <string name="hor_reorder_now">Order again now</string>
    <string name="hor_reorder_later">Order again later</string>
    <string name="hor_reorder_success">Ride ordered. A driver is being assigned.</string>
    <string name="hor_reorder_scheduled">Ride scheduled for %1$s.</string>
    <string name="hor_cancel_ride">Cancel ride</string>
    <string name="hor_cancel_confirm_title">Cancel this ride?</string>
    <string name="hor_cancel_confirm_message">This will cancel the scheduled ride. This can\'t be undone.</string>
    <string name="hor_cancel_confirm_yes">Cancel ride</string>
    <string name="hor_cancel_confirm_no">Keep ride</string>
    <string name="hor_cancel_success">Ride canceled.</string>
    <string name="hor_panic_button">PANIC</string>
    <string name="hor_panic_button_desc">Raise emergency alarm</string>
    <string name="hor_panic_confirm_title">Send a panic alert?</string>
    <string name="hor_panic_confirm_message">This raises the emergency alarm for this ride: the operator and everyone on the ride are notified immediately. Use only in a real emergency.</string>
    <string name="hor_panic_confirm_yes">Send alert</string>
    <string name="hor_panic_confirm_no">Cancel</string>
    <string name="hor_panic_success">Panic alert sent. Help is on the way.</string>
    <string name="hor_panic_sent">Panic alert sent</string>
    <string name="panic_alerts_button">Panic alerts</string>
    <string name="panic_list_title">Panic alerts</string>
    <string name="panic_list_empty">No panic alerts.</string>
    <string name="panic_list_refresh">Refresh</string>
    <string name="panic_caller_unknown">Unknown caller</string>
    <string name="panic_ride">Ride #%1$d</string>
    <string name="panic_status_active">ACTIVE</string>
    <string name="panic_status_resolved">Resolved</string>
    <string name="panic_resolve">Resolve</string>
    <string name="panic_resolve_confirm_title">Resolve this panic?</string>
    <string name="panic_resolve_confirm_message">Mark this panic alert as handled. Everyone will see it as resolved.</string>
    <string name="panic_resolve_confirm_yes">Resolve</string>
    <string name="panic_resolve_confirm_no">Cancel</string>
    <string name="panic_resolved_toast">Panic resolved.</string>
    <string name="panic_channel_name">Panic alerts</string>
    <string name="panic_channel_desc">Emergency panic alerts raised during rides</string>
    <string name="panic_notif_title">🚨 PANIC alert</string>
    <string name="panic_notif_body">%1$s raised a panic on ride #%2$s</string>
    <string name="panic_notif_resolved_title">Panic resolved</string>
    <string name="panic_notif_resolved_body">%1$s\'s panic on ride #%2$s was resolved</string>
    <string name="panic_service_channel_name">Panic alert listener</string>
    <string name="panic_service_channel_desc">Keeps watching for panic alerts in the background</string>
    <string name="panic_service_title">Panic alerts active</string>
    <string name="panic_service_text">Listening for emergency alerts</string>
    <string name="hor_back">Back</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
</resources>